<resources>
    <string name="app_name">AndroidTutorial</string>
    <string name="sex">性別</string>
    <string name="sex_hint">(輸入性別)</string>
    <string name="age">年齡</string>
    <string name="age_hint">(輸入年齡)</string>
    <string name="btn_ok">確定</string>
    <string name="suggestion">建議：</string>
    <string name="sug_not_hurry">還不急。</string>
    <string name="sug_get_married">趕快結婚！</string>
    <string name="sug_find_couple">開始找對象。</string>
    <string name="sex_male">男</string>
    <string name="sex_female">女</string>

    <string name="male_age_range1">小於 28 歲</string>
    <string name="male_age_range2">28~33 歲</string>
    <string name="male_age_range3">大於 33 歲</string>
    <string name="female_age_range1">小於 25 歲</string>
    <string name="female_age_range2">25~30 歲</string>
    <string name="female_age_range3">大於 30 歲</string>

    <string-array name="sex_list">
        <item>男</item>
        <item>女</item>
    </string-array>
    <string name="span_sex_list_prompt">請選擇性別</string>

    <string name="music">音樂</string>
    <string name="sing">唱歌</string>
    <string name="dance">跳舞</string>
    <string name="travel">旅行</string>
    <string name="reading">閱讀</string>
    <string name="writing">寫作</string>
    <string name="climbing">爬山</string>
    <string name="swim">游泳</string>
    <string name="exercise">運動</string>
    <string name="fitness">健身</string>
    <string name="photo">攝影</string>
    <string name="eating">美食</string>
    <string name="painting">繪畫</string>
    <string name="your_hobby">你的興趣：</string>

</resources>
