<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/sex"/>


        <Spinner
            android:id="@+id/spnSex"
            android:entries="@array/sex_list"
            android:spinnerMode="dialog"
            android:prompt="@string/span_sex_list_prompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/age"/>

        <TextView
            android:id="@+id/txtAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
           android:hint="@string/age_hint"/>

        <NumberPicker
            android:id="@+id/numberPickerAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            >

        </NumberPicker>

        <TextView
            android:id="@+id/txtSug"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/suggestion"
            android:textSize="25sp"/>

        <Button
            android:id="@+id/btnOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_ok"
            android:textSize="15sp"
            android:layout_gravity="center_horizontal"
            />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>