<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
       >


        <TextView
            android:id="@+id/txtSex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sex"
            android:textSize="25sp"/>

        <!--<EditText-->
            <!--android:id="@+id/edtSex"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="@string/sex_hint"-->
            <!--android:textSize="25sp"-->
            <!--/>-->
        <Spinner
            android:id="@+id/spnSex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/sex_list"
            android:spinnerMode="dialog"
            android:prompt="@string/span_sex_list_prompt">

        </Spinner>

        <TextView
            android:id="@+id/txtAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textSize="25sp"/>

        <EditText
            android:id="@+id/edtAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age_hint"
            android:textSize="25sp"
            />

        <TextView
            android:id="@+id/txtSug"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/suggestion"
            android:textSize="25sp"/>

        <Button
            android:id="@+id/btnOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_ok"
            android:textSize="15sp"
            android:layout_gravity="center_horizontal"
            />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>